--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
     "moment": "^2.29.4",
