--- a/mobile/package.json
+++ b/mobile/package.json
@@ -18,9 +18,11 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-maps": "1.3.2",
+    "react-native-paper": "^5.9.1",
     "react-native-permissions": "^3.8.4",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0"
+    "react-native-safe-area-context": "^4.7.1",
+    "react-native-screens": "~3.20.0",
+    "react-native-simple-toast": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
