--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,16 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "6.7.3",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@rneui/base": "^0.0.0-edge.2",
+    "@rneui/themed": "^0.0.0-edge.2",
     "axios": "^1.4.0",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-dropdown-select-list": "^2.0.4",
     "react-native-maps": "1.3.2",
-    "react-native-paper": "^5.9.1",
     "react-native-permissions": "^3.8.4",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "~3.20.0",
