--- a/mobile/package.json
+++ b/mobile/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-dropdown-select-list": "^2.0.4",
+    "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-maps": "1.3.2",
     "react-native-permissions": "^3.8.4",
     "react-native-safe-area-context": "^4.7.1",
