--- a/mobile/package.json
+++ b/mobile/package.json
@@ -20,13 +20,15 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-autocomplete-dropdown": "^3.0.2",
     "react-native-dropdown-select-list": "^2.0.4",
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-maps": "1.3.2",
     "react-native-permissions": "^3.8.4",
-    "react-native-safe-area-context": "^4.7.1",
+    "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-simple-toast": "^2.0.1"
+    "react-native-simple-toast": "^2.0.1",
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
